[gd_scene load_steps=6 format=2]

[ext_resource path="res://MyHex/my_demo_2D.gd" type="Script" id=1]
[ext_resource path="res://MyHex/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/CameraControl.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Velocity Display.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Cursor Info.gd" type="Script" id=5]

[node name="2D Demo" type="Node"]

[node name="Area2D" type="Node2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 1 )

[node name="Highlight" type="Polygon2D" parent="Area2D"]
z_index = 1
polygon = PoolVector2Array( -12.5, 21.6506, 12.5, 21.6506, 25, 0, 12.5, -21.6506, -12.5, -21.6506, -25, 0 )

[node name="Label" type="Label" parent="Area2D/Highlight"]
margin_left = 5.0
margin_top = -39.0
margin_right = 52.0
margin_bottom = -25.0
text = "SCREEN"

[node name="AreaCoords" type="Label" parent="Area2D/Highlight"]
margin_left = 55.0
margin_top = -39.0
margin_right = 105.0
margin_bottom = -25.0
text = "SCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Area2D/Highlight"]
margin_left = 25.0
margin_top = -19.0
margin_right = 56.0
margin_bottom = -5.0
text = "HEX"

[node name="HexCoords" type="Label" parent="Area2D/Highlight"]
margin_left = 55.0
margin_top = -19.0
margin_right = 105.0
margin_bottom = -5.0
text = "HEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource( 2 )

[node name="UI" type="Control" parent="Camera2D"]
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity Display" type="Control" parent="Camera2D/UI"]
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityY" type="Label" parent="Camera2D/UI/Velocity Display"]
anchor_left = 0.4
anchor_top = -0.4
anchor_right = 0.4
anchor_bottom = -0.4
grow_horizontal = 2
grow_vertical = 2
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityX" type="Label" parent="Camera2D/UI/Velocity Display"]
anchor_left = 0.4
anchor_top = -0.45
anchor_right = 0.4
anchor_bottom = -0.45
grow_horizontal = 2
grow_vertical = 2
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/UI/Velocity Display"]
anchor_left = 0.35
anchor_top = -0.4
anchor_right = 0.35
anchor_bottom = -0.4
grow_horizontal = 2
grow_vertical = 2
text = "Y-Velocity"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Camera2D/UI/Velocity Display"]
anchor_left = 0.35
anchor_top = -0.45
anchor_right = 0.35
anchor_bottom = -0.45
grow_horizontal = 2
grow_vertical = 2
text = "X-Velocity"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor Info" type="Control" parent="Camera2D/UI"]
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CursorPos" type="Label" parent="Camera2D/UI/Cursor Info"]
anchor_left = -0.35
anchor_top = -0.45
anchor_right = -0.35
anchor_bottom = -0.45
grow_horizontal = 2
grow_vertical = 2
text = "TO_BE_FILLED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/UI/Cursor Info"]
anchor_left = -0.45
anchor_top = -0.45
anchor_right = -0.45
anchor_bottom = -0.45
grow_horizontal = 2
grow_vertical = 2
text = "CursorPos"
align = 1
valign = 1

[node name="Decor" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Decor"]
position = Vector2( 400, 200 )

[node name="Label" type="Label" parent="Decor/Node2D"]
grow_horizontal = 2
grow_vertical = 2
text = "This is some text."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D2" type="Node2D" parent="Decor"]
position = Vector2( 600, 500 )

[node name="Label" type="Label" parent="Decor/Node2D2"]
grow_horizontal = 2
grow_vertical = 2
text = "This is also some text."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D3" type="Node2D" parent="Decor"]
position = Vector2( -100, -200 )

[node name="Label" type="Label" parent="Decor/Node2D3"]
grow_horizontal = 2
grow_vertical = 2
text = "This text might be harder to find."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D4" type="Node2D" parent="Decor"]
position = Vector2( 1100, 700 )

[node name="Label" type="Label" parent="Decor/Node2D4"]
grow_horizontal = 2
grow_vertical = 2
text = "This text is also sort of hidden."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
